# social-media-bot-detection

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yml
docs/: configuration.md  extending.md  faq.md  installation.md  library.md  output-reference.md  providers.md  usage.md  web.md
examples/: sample_comments.csv  sample_followers.csv
smbd/: __init__.py  cli.py  community.py  config.py  followers.py  report.py  schema.py  scoring.py
smbd/detectors/: __init__.py  account_weakness.py  base.py  coordination.py  duplicate_text.py  ratio_anomaly.py  timing_burst.py
smbd/features/: __init__.py  account.py  temporal.py  text.py
smbd/llm/: __init__.py  anthropic_client.py  base.py  enrich.py
smbd/providers/: __init__.py  base.py  browser.py  importer.py  instagram.py  registry.py  x.py  youtube.py
smbd/web/: __init__.py  app.py
smbd/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_browser.py  test_community.py  test_detectors.py  test_end_to_end.py  test_features.py  test_followers.py  test_instagram.py  test_llm.py  test_meta_export.py  test_registry.py  test_scoring.py  test_web.py  test_x.py  test_youtube.py
tools/: make_screenshots.py  shoot_web.py
