[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smbd"
version = "0.1.0"
description = "Social Media Bot Detection Tool — analyze comments, followers, and amplification for fake/bot/coordinated activity, with evidence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "SMBD contributors" }]
keywords = ["bot-detection", "social-media", "spam", "coordination", "moderation"]
dependencies = []

[project.optional-dependencies]
cli = ["rich>=13.0"]
llm = ["anthropic>=0.39"]
instagram = ["requests>=2.31"]
dev = ["pytest>=7.0", "rich>=13.0"]

[project.scripts]
smbd = "smbd.cli:main"

[project.urls]
Homepage = "https://github.com/your-org/smbd"
Issues = "https://github.com/your-org/smbd/issues"

[tool.setuptools.packages.find]
include = ["smbd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
