[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smbd"
version = "0.5.0"
description = "Social Media Bot Detection Tool — analyze comments, followers, and amplification for fake/bot/coordinated activity, with evidence."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "SMBD contributors" }]
keywords = ["bot-detection", "social-media", "spam", "coordination", "moderation"]
dependencies = []

[project.optional-dependencies]
cli = ["rich>=13.0"]
llm = ["anthropic>=0.39"]
# Optional graph-library backend for modularity-based community detection;
# without it, communities fall back to connected components (stdlib).
graph = ["networkx>=3"]
# Local web app (`smbd serve`). BYO-key, runs on your machine.
web = ["fastapi>=0.110", "uvicorn>=0.27"]
# Opt-in, experimental headless-browser reader for PUBLIC pages (the "Browser"
# workflow). Also run: python -m playwright install chromium
browser = ["playwright>=1.40"]
dev = ["pytest>=7.0", "rich>=13.0", "networkx>=3", "fastapi>=0.110", "uvicorn>=0.27", "httpx>=0.27"]

[project.scripts]
smbd = "smbd.cli:main"

[project.urls]
Homepage = "https://github.com/OlsoPubZZZ/social-media-bot-detection"
Issues = "https://github.com/OlsoPubZZZ/social-media-bot-detection/issues"

[tool.setuptools.packages.find]
include = ["smbd*"]

[tool.setuptools.package-data]
"smbd.web" = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
